--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
                 <a href="portfolio.html" class="nav-link" data-i18n="portfolio">Portfólio</a>
                 <a href="contato.html" class="nav-link" data-i18n="contact">Contato</a>
             </nav>
+            <div class="lang-selector header-lang-floating">
+                <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <line x1="2" y1="12" x2="22" y2="12"></line>
+                    <path
+                        d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
+                    </path>
+                </svg>
+                <select aria-label="Idioma">
+                    <option value="pt">PT</option>
+                    <option value="en">EN</option>
+                </select>
+            </div>
             <!-- Mobile Menu Button -->
             <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Menu">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -78,14 +91,15 @@
 
             <!-- Rotating Subtitles -->
             <div class="hero-subtitle-container">
-                <p class="hero-subtitle active">Where textiles become fashion.</p>
-                <p class="hero-subtitle">A complete textile archive designed for clothing creation.</p>
-                <p class="hero-subtitle">From fabric to fashion — all in one catalog.</p>
+                <p class="hero-subtitle active" data-i18n="rotatingPhrase1">Where textiles become fashion.</p>
+                <p class="hero-subtitle" data-i18n="rotatingPhrase2">A complete textile archive designed for clothing
+                    creation.</p>
+                <p class="hero-subtitle" data-i18n="rotatingPhrase3">From fabric to fashion — all in one catalog.</p>
             </div>
         </div>
 
         <!-- Global Button -->
-        <a href="#collection" class="hero-btn">PORTFÓLIO</a>
+        <a href="#collection" class="hero-btn" data-i18n="portfolio">PORTFÓLIO</a>
 
         <!-- Slider Indicators -->
         <div class="hero-indicators">
